Bug 149417 - TIFFFillStrip: Read error at scanline 197; got 865 bytes, expected 866
Summary: TIFFFillStrip: Read error at scanline 197; got 865 bytes, expected 866
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-06-01 08:46 UTC by Xisco Faulí
Modified: 2022-06-01 19:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison LibreOffice 7.4 master and PP 2016 (93.83 KB, image/png)
2022-06-01 08:46 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-06-01 08:46:40 UTC
Created attachment 180513 [details]
Comparison LibreOffice 7.4 master and PP 2016

Steps to reproduce:
1. Open attachment 85772 [details] from bug 6568

-> Tiff image on top is not displayed. Console shows error: TIFFFillStrip: Read error at scanline 197; got 865 bytes, expected 866. See comparison

Reproduced in

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: c3baf2a7f48b5ee46c6792b3106cb4fedb4a2ad2
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-06-01 08:48:01 UTC
Started to happen after

author	Caolán McNamara <caolanm@redhat.com>	2022-05-19 17:11:23 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2022-05-21 11:52:30 +0200
commit 22b50f1937de67e4ad9e692d6964aa5b8d33af7a (patch)
tree 22bdeb790811b0eeabaa918ad681d859c7ee9ff4
parent d05b8080b25877e94d54576744b68f01ae775380 (diff)
use libtiff for tiff import

bisected with: bibisect-linux64-7.4

Adding Cc: to Caolán McNamara
Comment 2 Caolán McNamara 2022-06-01 11:40:06 UTC
we could allow one short read, we do this for the jpeg filter too.
Comment 3 Commit Notification 2022-06-01 14:05:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c90db9e43db509bef6892c8443480ffa9ed8bbe0

Resolves: tdf#149417 allow one short read in tiff import as not a failure

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2022-06-01 15:46:01 UTC
Verified in

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: 754eb1541a6ca709f78afbc7fb2b75f626562dcc
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for the quick fix!!
Comment 5 Commit Notification 2022-06-01 19:39:41 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ed78f1be7cf3f2338323a146a84de5e4b6db1a4

tdf#149417: vcl_filters_test: Add unittest

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.