Resolves: tdf#149417 allow one short read in tiff import as not a failure

Change-Id: I77bff41abd51cfd3050836fff04e9644b0828c09
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135239
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>